[metadata]
name = sylfr-HeuronPatapon
version = attr: hpat.sylfr.__version__
author = Heuron Patapon
author_email = heuron-patapon@laposte.net
description = Syllabification de mots en français
url = https://github.com/HeuronPatapon/sylfr.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
install_requires = xsampa-HeuronPatapon @ git+https://github.com/HeuronPatapon/xsampa

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        sylfr = hpat.sylfr.__main__:main
